--- a/public/about.html
+++ b/public/about.html
@@ -20,7 +20,7 @@
         <div class="container">
             <nav class="main-nav">
                 <img src="img/logo.png" alt="" class="main-nav__logo">
-                <ul class="main-nav__items">
+                <butto                <ul class="main-nav__items">
                     <li><a href="index.html" >Home</a></li>
                     <li><a href="about.html" class="active">About</a></li>
                     <li><a href="projects.html">Projects</a></li>
@@ -191,6 +191,3 @@
             }
         })
     </script>
-
-</body>
-</html>
