--- a/public/projects.html
+++ b/public/projects.html
@@ -19,7 +19,7 @@
         <div class="container">
             <nav class="main-nav">
                 <img src="img/logo.png" alt="" class="main-nav__logo">
-                <ul class="main-nav__items">
+                <butt                <ul class="main-nav__items">
                     <li><a href="index.html" >Home</a></li>
                     <li><a href="about.html" >About</a></li>
                     <li><a href="projects.html" class="active">Projects</a></li>
@@ -175,7 +175,3 @@
     </footer>
 
     <script src="js/jquery.min.js"></script>
-    <script src="js/lightbox.min.js"></script>
-
-</body>
-</html>
